--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/preact": "^2.1.0",
-    "astro": "^2.2.0",
+    "@astrojs/preact": "^3.2.0",
+    "@astrojs/react": "^3.3.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.7.0",
     "preact": "^10.6.5"
   }
 }
